viewStat
